--- a/src/main/resources/templates/layouts/Master/companyDetail.html
+++ b/src/main/resources/templates/layouts/Master/companyDetail.html
@@ -96,8 +96,9 @@
 																		<input type="text" class="form-control"
 																			id="companyCode" name="companyCode"
 																			placeholder="company code"
-																			th:field="*{compCode}" title="company code"
-																			onkeyup="getCompanyCode()">
+																			th:field="*{compCode}"
+																			title="This field is required"
+																			onkeyup="getCompanyCode()" required>
 																	</div>
 																	<div class="form-group col-md-4">
 																		<label for="inputPassword4">Company
@@ -106,8 +107,9 @@
 																		<input type="text" class="form-control"
 																			id="companyName" name="companyName"
 																			placeholder="Company Name"
-																			th:field="*{compName}" title="company name"
-																			required onkeyup=getCompanyName()>
+																			th:field="*{compName}"
+																			title="This field is required" required
+																			onkeyup=getCompanyName()>
 																	</div>
 																	<div class="form-group col-md-4">
 																		<label for="inputPassword4">Company Type</label>
@@ -124,12 +126,13 @@
 
 																	</div>
 
+
+
 																	<div class="form-group col-md-4">
-																		<label for="inputAddress">Director Name</label>
+																		<label>Director Name</label>
 																		<input type="text" class="form-control"
-																			th:field="*{dirName}"
-																			placeholder="director name"
-																			title="Director Name">
+																			th:field="*{dirName}" placeholder"Director
+																			Name" title="director name" />
 																	</div>
 
 																	<div class="form-group col-md-4">
@@ -244,7 +247,7 @@
 																				<input type="text" class="form-control"
 																					id="address1" name="address1"
 																					placeholder="Address-1"
-																					title="address-1"
+																					title="This field is required"
 																					th:field="*{cAddr1}" required>
 																			</div>
 																		</div>
@@ -281,8 +284,7 @@
 																			<div class="col-md-4">
 																				<select class="form-control" id="state"
 																					onchange="getCityOnState()"
-																					title="state" th:field="*{cState}"
-																					required>
+																					title="state" th:field="*{cState}">
 																					<option value="">Select State
 																					</option>
 																					<option
@@ -307,7 +309,7 @@
 																				<select
 																					class="form-control cityContainer"
 																					title="city" id="cityCode"
-																					th:field="*{cCity}" required>
+																					th:field="*{cCity}">
 																					<option value="">Select City
 																					</option>
 
@@ -324,7 +326,11 @@
 																					class="form-control"
 																					th:field="*{cPin}" id="pin1"
 																					name="pin1" title="pin"
-																					placeholder="Pin Code">
+																					placeholder="Pin Code"
+																					onkeyup="pin1Validation()">
+																				<span class="error" id="pin1Error"
+																					style='display:none'>Pin Should be 6
+																					digit</span>
 																			</div>
 																		</div>
 
@@ -381,9 +387,13 @@
 																			<div class="col-md-4">
 																				<input type="text" class="form-control"
 																					id="phone1" name="phone1"
-																					placeholder="Phone-1"
-																					title="phone-1"
+																					oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+																					placeholder="Phone-1" value="0"
+																					title="phone-1" maxlength="12"
 																					th:field="*{cPhone1}">
+																				<span class="error" id="phone1Error"
+																					style='display:none'>Phone nubmer is
+																					in 0123456789 format</span>
 																			</div>
 																		</div>
 
@@ -394,7 +404,12 @@
 																				<input type="text" class="form-control"
 																					placeholder="Phone-2" id="phone2"
 																					name="phone2" title="phone-2"
-																					th:field="*{cPhone2}">
+																					oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+																					th:field="*{cPhone2}"
+																					maxlength="12">
+																					<span class="error" id="phone2Error"
+																					style='display:none'>Phone nubmer is
+																					in 0123456789 format</span>
 																			</div>
 																		</div>
 
@@ -432,13 +447,13 @@
 																<label for="inputAddress">Name</label><span
 																	style="color: red">*</span> <input type="text"
 																	class="form-control" id="name" name="name"
-																	placeholder="Name" th:field="*{rName}" title="name"
-																	required>
+																	placeholder="Name" th:field="*{rName}"
+																	title="This field is required" required>
 															</div>
 															<div class="form-group col-md-4">
 																<label for="inputEmail4">Type of Deductor</label>
 																<select class="form-control" id=""
-																	title="type of deductor" required
+																	title="type of deductor"
 																	th:field="*{rTypeOfDeductor}">
 
 																	<option value="other">Other</option>
@@ -464,7 +479,8 @@
 																	style="color: red">*</span> <input type="text"
 																	class="form-control" id="designation"
 																	name="designation" placeholder="Designation"
-																	th:field="*{rDesig}" title="designation" required>
+																	th:field="*{rDesig}" title="This field is required"
+																	required>
 															</div>
 															<div class="form-group col-md-4">
 																<label for="inputAddress">Flat Number</label> <input
@@ -494,7 +510,7 @@
 																<label for="inputAddress">State</label> <select
 																	class="form-control" id="rState"
 																	onchange="getRCityOnState()" title="state"
-																	th:field="*{rState}" required>
+																	th:field="*{rState}">
 																	<option value="">Select State</option>
 																	<option th:each="state :  ${listState}"
 																		th:text="${state.stateName}"
@@ -506,7 +522,7 @@
 																<label for="inputAddress">Town/City/District</label>
 																<select class="form-control rCityContainer"
 																	title="town/city/district" id="cityCode"
-																	th:field="*{rCity}" required>
+																	th:field="*{rCity}">
 																	<option value="">Select City</option>
 
 																</select>
@@ -522,13 +538,21 @@
 																<label for="inputAddress">Pin</label> <input
 																	type="number" class="form-control" id="pin2"
 																	name="pin2" placeholder="Pin" th:field="*{rPin}"
-																	title="pin">
+																	title="pin" onkeyup="pin2Validation()">
+																<span class="error" id="pin2Error"
+																	style='display:none'>Pin Should be 6
+																	digit</span>
 															</div>
 															<div class="form-group col-md-4">
 																<label for="inputAddress">Telephone Number</label>
 																<input type="number" class="form-control" id="telephone"
+																	oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 																	name="telephone" placeholder="Telephone Number"
-																	th:field="*{rTel}" title="telephone number">
+																	th:field="*{rTel}" title="telephone number"
+																	maxlength="12">
+																	<span class="error" id="phone3Error"
+																					style='display:none'>Phone nubmer is
+																					in 0123456789 format</span>
 															</div>
 															<div class="form-group col-md-4">
 																<label for="inputAddress">Email</label> <input
@@ -554,14 +578,14 @@
 																	style="color: red">*</span> <input type="text"
 																	class="form-control" id="panNumber" name="panNumber"
 																	placeholder="Pan Number" th:field="*{panNumber}"
-																	title="pan number" required>
+																	title="This field is required" required>
 															</div>
 															<div class="form-group col-md-6">
 																<label for="inputEmail4">GST Number</label><span
 																	style="color: red">*</span> <input type="text"
 																	class="form-control" id="gstNumber" name="gstNumber"
 																	placeholder="Gst Number" th:field="*{tGstNo}"
-																	title="gst number" required>
+																	title="This field is required" required>
 															</div>
 															<div class="form-group col-md-6">
 																<label for="inputPassword4">Taxpayer Legal
@@ -831,7 +855,8 @@
 													</div>
 
 													<div class="box-footer">
-														<button type="submit" class="btn btn-primary">Submit</button>
+														<button type="submit" class="btn btn-primary"
+															id="submit">Submit</button>
 
 														<button type="reset" class="btn btn-danger" value="Reset">
 															&nbsp;Reset
@@ -1015,56 +1040,96 @@
 
 
 
-	<script>
-		$(function () {
-			$("#smartwizard-default-primary").smartWizard({
-				theme: "default",
-				showStepURLhash: false
-			});
+	// for pin validation
 
-			// Validation
-			var $validationForm = $("#companyDetail");
-			$validationForm.validate({
-				errorPlacement: function errorPlacement(error, element) {
-					$(element).parents(".form-group").append(
-						error.addClass("invalid-feedback small d-block"))
-				},
-				highlight: function (element) {
-					$(element).addClass("is-invalid");
-				},
-				unhighlight: function (element) {
-					$(element).removeClass("is-invalid");
-				},
-				rules: {
-					"wizard-confirm": {
-						equalTo: "input[name=\"wizard-password\"]"
-					}
+	<script type="text/javascript">
+
+
+		function pin1Validation() {
+
+			var pin_code = document.getElementById("pin1");
+			var pin_error = document.getElementById("pin1Error").value;
+
+			var pat1 = /^\d{6}$/;
+			var pattern = /^\d{10}$/;
+			var filter = /^([a-z A-Z 0-9 _\.\-])+\@(([a-z A-Z 0-9\-])+\.)+([a-z A-z 0-9]{3,3})+$/;
+
+
+			if (!pat1.test(pin_code.value)) {
+
+				$('#pin1Error').show();
+				pin_code.focus();
+				return false;
+			} else {
+				$('#pin1Error').hide();
+			}
+
+		}
+
+
+		function pin2Validation() {
+
+			var pin_code = document.getElementById("pin2");
+			var pin_error = document.getElementById("pin2Error").value;
+
+			var pat1 = /^\d{6}$/;
+			var pattern = /^\d{10}$/;
+			var filter = /^([a-z A-Z 0-9 _\.\-])+\@(([a-z A-Z 0-9\-])+\.)+([a-z A-z 0-9]{3,3})+$/;
+
+
+			if (!pat1.test(pin_code.value)) {
+
+				$('#pin2Error').show();
+				pin_code.focus();
+				return false;
+			} else {
+				$('#pin2Error').hide();
+			}
+
+		}
+
+
+
+		$(document).ready(function () {
+			$("#submit").click(function () {
+				var user_mobile1 = document.getElementById("phone1");
+				var user_mobile2 = document.getElementById("phone2");
+				var user_mobile3 = document.getElementById("telephone");
+
+				var pat1 = /^\d{6}$/;
+				var pattern = /^\d{10}$/;
+				var filter = /^([a-z A-Z 0-9 _\.\-])+\@(([a-z A-Z 0-9\-])+\.)+([a-z A-z 0-9]{3,3})+$/;
+
+				if (!pattern.test(user_mobile.value)) {
+					$('#phone1Error').show();
+					user_mobile1.focus();
+					return false;
 				}
-			});
-			$validationForm.smartWizard({
-				autoAdjustHeight: false,
-				backButtonSupport: false,
-				useURLhash: false,
-				showStepURLhash: false,
-
-			}).on("leaveStep",
-				function (e, anchorObject, stepNumber, stepDirection) {
-					if (stepDirection === "forward") {
-						return $validationForm.valid();
-					}
-					return true;
-				});
-			/* $validationForm.find(".btn-submit").on("click", function() {
-				if (!$validationForm.valid()) {
-					return;
+				if (!pattern.test(user_mobile2.value)) {
+					$('#phone2Error').show();
+					user_mobile2.focus();
+					return false;
+				}
+				if (!pattern.test(user_mobile2.value)) {
+					$('#phone3Error').show();
+					user_mobile3.focus();
+					return false;
 				}
 				
-				return false;
-			}); */
+			});
 		});
 
-		
+
+
+
+
+
+
+
+
 	</script>
+
+
 
 	<!--   <section class="content">
         
